[gd_scene load_steps=5 format=3 uid="uid://x5yofoaaiiur"]

[ext_resource type="Script" path="res://addons/jaysreusablecomponentsandthings/components/character-movement-3d.gd" id="1_akxby"]
[ext_resource type="Script" path="res://scenes/entities/enemy.gd" id="1_wyedu"]
[ext_resource type="Script" path="res://addons/jaysreusablecomponentsandthings/components/burnable-component.gd" id="2_cr1f7"]
[ext_resource type="Script" path="res://addons/jaysreusablecomponentsandthings/components/health-component.gd" id="2_shfn3"]

[node name="Enemy" type="CharacterBody3D"]
script = ExtResource("1_wyedu")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_shfn3")

[node name="BurnableComponent" type="Node" parent="."]
script = ExtResource("2_cr1f7")

[node name="CharacterMovement3D" type="Node3D" parent="."]
script = ExtResource("1_akxby")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
